# relay-gateway

./: CMakeLists.txt  README.md  project.config
files/: export_gpio.sh  relay_control_appd  relay_control_continuous.sh  relay_control_continuousd  relay_gateway.cfg  relay_gateway_appd  relay_gateway_continuous.sh  relay_gateway_continuousd
linux_test_application/: README.md  flow_access.cfg  relay-gateway-test.c
src/: CMakeLists.txt  flow_interface.c  flow_interface.h  log.h  relay_control.c  relay_gateway.c
